--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-router": "^1.131.44",
     "@tanstack/react-start": "^1.131.44",
     "@tanstack/react-table": "^8.21.3",
@@ -22,16 +24,28 @@
     "lucide-react": "^0.544.0",
     "mailparser": "^3.7.4",
     "node-imap": "^0.9.6",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-do": "^1.1.6",
     "react-dom": "^19.1.1",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13",
     "vite": "^7.1.6"
   },
   "devDependencies": {
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "vite-tsconfig-paths": "^5.1.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KnJakob/mailClient.git"
+  },
+  "bugs": {
+    "url": "https://github.com/KnJakob/mailClient/issues"
+  },
+  "homepage": "https://github.com/KnJakob/mailClient#readme"
 }
